--- a/public/de/finanzen/aktuellefinanzuebersicht/index.html
+++ b/public/de/finanzen/aktuellefinanzuebersicht/index.html
@@ -62,7 +62,8 @@
               Samstag, März 1, 2025
           </div>
         </div>
-        <h2 id="transparenz">Transparenz</h2>
+        <div class="single-content">
+          <h2 id="transparenz">Transparenz</h2>
 <p>Gemeinnützigkeit braucht Transparenz!
 Die nachfolgenden Aufstellungen sind Teil unseres Versprechens auf Transparenz und sollen Ihnen die Möglichkeit der Kontrolle und Nachvollziehbarkeit geben.</p>
 <h2 id="aktuelle-finanzsituation">Aktuelle Finanzsituation</h2>
@@ -821,6 +822,7 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
     });
   });
 </script>
+      </div>
       </div>
     </div>
   </div>
