--- a/public/de/index.html
+++ b/public/de/index.html
@@ -317,9 +317,9 @@
             const imageWidth = image.offsetWidth;
             const imageHeight = image.offsetHeight;
             
-            dependentElement1.style.top = (imageTop + imageHeight / 3) + 'px'; 
+            dependentElement1.style.top = (imageTop + imageHeight / 3) + 'px';
             dependentElement1.style.fontSize = Math.min(imageHeight / 5, 130) + 'px';
-            dependentElement2.style.top = (dependentElement1.offsetTop + dependentElement1.offsetHeight) + 'px'; 
+            dependentElement2.style.top = (dependentElement1.offsetTop + dependentElement1.offsetHeight) + 'px';
             dependentElement2.style.fontSize = Math.min(imageHeight / 5, 130) + 'px';
             dependentElement1.style.left = 30 + 'px';
             dependentElement2.style.left = 30 + 'px';
@@ -332,23 +332,28 @@
             if (imageWidth > 900 && imageWidth < 1050) {
                 dependentElement1.style.top = (imageTop + imageHeight / 3) + 'px'; 
                 dependentElement1.style.fontSize = Math.min(imageHeight / 7, 100) + 'px';
-                dependentElement2.style.top = (dependentElement1.offsetTop + dependentElement1.offsetHeight) + 'px'; 
+                dependentElement2.style.top = (dependentElement1.offsetTop + dependentElement1.offsetHeight) + 'px';
                 dependentElement2.style.fontSize = Math.min(imageHeight / 7, 100) + 'px';
             }
 
             if (imageWidth > 620 && imageWidth <= 900) {
-                dependentElement1.style.top = (imageTop + imageHeight / 2) + 'px'; 
+                dependentElement1.style.top = (imageTop + imageHeight / 2) + 'px';
                 dependentElement1.style.fontSize = Math.min(imageHeight / 10, 100) + 'px';
-                dependentElement2.style.top = (dependentElement1.offsetTop + dependentElement1.offsetHeight) + 'px'; 
+                dependentElement2.style.top = (dependentElement1.offsetTop + dependentElement1.offsetHeight) + 'px';
                 dependentElement2.style.fontSize = Math.min(imageHeight / 10, 100) + 'px';
             }
 
-
             if (imageWidth <= 620) {
-                dependentElement1.style.top = (imageTop + imageHeight / 2) + 'px'; 
+                dependentElement1.style.top = (imageTop + imageHeight / 2) + 'px';
                 dependentElement1.style.fontSize = Math.min(imageHeight / 13, 100) + 'px';
-                dependentElement2.style.top = (dependentElement1.offsetTop + dependentElement1.offsetHeight) + 'px'; 
+                dependentElement2.style.top = (dependentElement1.offsetTop + dependentElement1.offsetHeight) + 'px';
                 dependentElement2.style.fontSize = Math.min(imageHeight / 13, 100) + 'px';
+            }
+
+            if (dependentElement1.style.fontSize < 40 + 'px') {
+                dependentElement1.style.fontSize = 40 + 'px';
+                dependentElement2.style.fontSize = 40 + 'px';
+                dependentElement2.style.top = (dependentElement1.offsetTop + dependentElement1.offsetHeight) + 'px'; 
             }
         }
 
