--- a/public/de/finanzen/index.html
+++ b/public/de/finanzen/index.html
@@ -152,13 +152,13 @@
     }
 
     
-    function updateViewableArea() {
+    function updateViewableArea2() {
       const height = window.innerHeight;
       document.documentElement.style.setProperty('--viewable-height', `${height}px`);
     }
 
-    window.addEventListener('resize', updateViewableArea);
-    updateViewableArea();
+    window.addEventListener('resize', updateViewableArea2);
+    updateViewableArea2();   
   </script>
 >
   </body>
