--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -87,7 +87,7 @@
                                     <a href="#">Transparenz</a>
                                 </li>
                                 <li>
-                                    <a href="#">Finanzen</a>
+                                    <a href="Finanzen">Finanzen</a>
                                 </li>
                                 <li>
                                     <a href="#">Satzung</a>
@@ -178,6 +178,45 @@
         </li>
         <li  class="has-submenu">
             <a href="#" class="menu-title">Aider</a>
+            <div class="submenu-container-colRight">
+                <div class="submenu">
+                    <h3>
+                        Wie kann ich dem Haus der Sonne helfen?
+                    </h3>
+                    <div class="colums">
+                        <div class="submenu-column">
+                            <h4>Spenden</h4>
+                            <img src="/img/Spenden.png" alt="Spenden">
+                            <ul>
+                                <li>
+                                    <a href="#">Pate werden</a>
+                                </li>
+                                <li>
+                                    <a href="#">Meine Patenschaft verwalten</a>
+                                </li>
+                                <li>
+                                    <a href="#">Spenden</a>
+                                </li>
+                                <li>
+                                    <a href="#">Gezielt Spenden</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="submenu-column">
+                            <h4>Mitglieder</h4>
+                            <img src="/img/Mitglieder.png" alt="Mitglieder">
+                            <ul>
+                                <li>
+                                    <a href="Helfen/MitgliedWerden">Mitglied werden</a>
+                                </li>
+                                <li>
+                                    <a href="#">Meine Mitgliedschaft verwalten</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </li>
     </ul>
 </nav>
