--- a/public/de/finanzen/aktuellefinanzuebersicht/index.html
+++ b/public/de/finanzen/aktuellefinanzuebersicht/index.html
@@ -59,7 +59,7 @@
               Author: WvS
           </div>
           <div class="single-date">
-              Samstag, März 1, 2025
+              Mittwoch, März 5, 2025
           </div>
         </div>
         <div class="single-content">
