eine warme Mahlzeit 2

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -117,7 +117,7 @@
                             <img src="/img/weizen.png" alt="Versorgung">
                             <ul>
                                 <li>
-                                    <a href="#">Eine warme Mahlzeit</a>
+                                    <a href="Versorgung/EineWarmeMahlzeit">Eine warme Mahlzeit</a>
                                 </li>
                                 <li>
                                     <a href="#">Sauberes Wasser</a>
