--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -32,6 +32,12 @@
   href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 />
 
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
+
 
 
 
@@ -81,7 +87,7 @@
                                     <a href="#">Ziel</a>
                                 </li>
                                 <li>
-                                    <a href="#">Organisation</a>
+                                    <a href="derVerein/Organisation">Organisation</a>
                                 </li>
                                 <li>
                                     <a href="#">Transparenz</a>
