verknüpfung mitgliedschaft verwalten

--- a/public/de/index.html
+++ b/public/de/index.html
@@ -217,7 +217,7 @@
                                     <a href="Helfen/MitgliedWerden">Mitglied werden</a>
                                 </li>
                                 <li>
-                                    <a href="#">Meine Mitgliedschaft verwalten</a>
+                                    <a href="Helfen/MitgliedschaftVerwalten">Meine Mitgliedschaft verwalten</a>
                                 </li>
                             </ul>
                         </div>
