kinder json + Patenschaft md

--- a/public/de/index.html
+++ b/public/de/index.html
@@ -196,10 +196,10 @@
                             <img src="/img/Spenden.png" alt="Spenden">
                             <ul>
                                 <li>
-                                    <a href="#">Pate werden</a>
+                                    <a href="Helfen/PateWerden">Pate werden</a>
                                 </li>
                                 <li>
-                                    <a href="#">Meine Patenschaft verwalten</a>
+                                    <a href="Helfen/PatenschaftVerwalten">Meine Patenschaft verwalten</a>
                                 </li>
                                 <li>
                                     <a href="#">Spenden</a>
@@ -323,7 +323,7 @@
                     <img src="/img/main-warmeMahlzeit.png" alt="main picture - warme Mahlzeit" class="img11">
                     <h3 id="js-headline11" class="headline11">1 € am Tag</h3>
                     <h3 id="js-headline12" class="headline12">für eine warme Mahlzeit.</h3>
-                    <button class="button11">Werde Pate</button>
+                    <button class="button11" onclick="window.location.href='./Helfen/pateWerden';">Werde Pate</button>
                 </div>
                 <div class="swiper-slide">
                     <img src="/img/main_campus.jpg" alt="main picture - Campus" class="img21">
