--- a/public/en/index.html
+++ b/public/en/index.html
@@ -196,10 +196,10 @@
                             <img src="/img/Spenden.png" alt="Spenden">
                             <ul>
                                 <li>
-                                    <a href="#">Pate werden</a>
+                                    <a href="Helfen/PateWerden">Pate werden</a>
                                 </li>
                                 <li>
-                                    <a href="#">Meine Patenschaft verwalten</a>
+                                    <a href="Helfen/PatenschaftVerwalten">Meine Patenschaft verwalten</a>
                                 </li>
                                 <li>
                                     <a href="#">Spenden</a>
@@ -217,7 +217,7 @@
                                     <a href="Helfen/MitgliedWerden">Mitglied werden</a>
                                 </li>
                                 <li>
-                                    <a href="#">Meine Mitgliedschaft verwalten</a>
+                                    <a href="Helfen/MitgliedschaftVerwalten">Meine Mitgliedschaft verwalten</a>
                                 </li>
                             </ul>
                         </div>
@@ -323,7 +323,7 @@
                     <img src="/img/main-warmeMahlzeit.png" alt="main picture - warme Mahlzeit" class="img11">
                     <h3 id="js-headline11" class="headline11">1€ a day</h3>
                     <h3 id="js-headline12" class="headline12">for one warm meal.</h3>
-                    <button class="button11">Get sponsor</button>
+                    <button class="button11" onclick="window.location.href='./Helfen/pateWerden';">Get sponsor</button>
                 </div>
                 <div class="swiper-slide">
                     <img src="/img/main_campus.jpg" alt="main picture - Campus" class="img21">
