--- a/public/de/index.html
+++ b/public/de/index.html
@@ -202,7 +202,7 @@
                                     <a href="Helfen/PatenschaftVerwalten">Meine Patenschaft verwalten</a>
                                 </li>
                                 <li>
-                                    <a href="#">Spenden</a>
+                                    <a href="Helfen/Spenden">Spenden</a>
                                 </li>
                                 <li>
                                     <a href="#">Gezielt Spenden</a>
@@ -549,7 +549,7 @@
       </div>
     </div>
     
-    <div class="list-container" onclick="location.href='\/de\/hilfezursebsthilfe\/';">
+    <div class="list-container" onclick="location.href='\/de\/hilfezurselbsthilfe\/';">
       <img src="/img/HilfeZurSelbsthilfe/HilfeZurSelbsthilfeTitle.jpeg" alt="Home Picture" class="list-picture">
       <div class="list-textbox">
         <div class="list-shifted">
