--- a/public/de/derverein/index.html
+++ b/public/de/derverein/index.html
@@ -114,7 +114,7 @@
                     <h2>Unterstützen Sie das Haus der Sonne</h2>
                     <div class="donate Spenden">
                         <p>Hier geht es zu den zahlreichen Möglichkeiten, den Verein finanziell zu unterstützen:</p>
-                        <div class="button-heart">
+                        <div class="button-heart" onclick="window.location.href='./Helfen';">
                             <button class="heart-btn"></button>
                             <p class="heart-btn-click">Klick</p>
                         </div>
