--- a/public/de/finanzen/aktuellefinanzuebersicht/index.html
+++ b/public/de/finanzen/aktuellefinanzuebersicht/index.html
@@ -862,7 +862,7 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
                     <h2>Unterstützen Sie das Haus der Sonne</h2>
                     <div class="donate Spenden">
                         <p>Hier geht es zu den zahlreichen Möglichkeiten, den Verein finanziell zu unterstützen:</p>
-                        <div class="button-heart">
+                        <div class="button-heart" onclick="window.location.href='./Helfen';">
                             <button class="heart-btn"></button>
                             <p class="heart-btn-click">Klick</p>
                         </div>
