--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -202,10 +202,10 @@
                                     <a href="Helfen/PatenschaftVerwalten">Meine Patenschaft verwalten</a>
                                 </li>
                                 <li>
-                                    <a href="#">Spenden</a>
+                                    <a href="Helfen/Spenden">Spenden</a>
                                 </li>
                                 <li>
-                                    <a href="#">Gezielt Spenden</a>
+                                    <a href="Helfen/GezieltSpenden">Gezielt Spenden</a>
                                 </li>
                             </ul>
                         </div>
@@ -611,7 +611,7 @@
                     <h2>Unterstützen Sie das Haus der Sonne</h2>
                     <div class="donate Spenden">
                         <p>Hier geht es zu den zahlreichen Möglichkeiten, den Verein finanziell zu unterstützen:</p>
-                        <div class="button-heart">
+                        <div class="button-heart" onclick="window.location.href='./Helfen';">
                             <button class="heart-btn"></button>
                             <p class="heart-btn-click">Klick</p>
                         </div>
