--- a/public/de/index.html
+++ b/public/de/index.html
@@ -97,7 +97,7 @@
                                     <a href="Finanzen">Finanzen</a>
                                 </li>
                                 <li>
-                                    <a href="#">Satzung</a>
+                                    <a href="wirUeberUns/dieSatzung">Die Satzung</a>
                                 </li>
                                 <li>
                                     <a href="#">Presse</a>
@@ -550,7 +550,7 @@
     </div>
     
     <div class="list-container" onclick="location.href='\/de\/wirueberuns\/';">
-      <img src="/img/derVerein/derVereinTitle.jpg" alt="Home Picture" class="list-picture">
+      <img src="/img/WirUeberUns/WirUeberUnsTitle.jpg" alt="Home Picture" class="list-picture">
       <div class="list-textbox">
         <div class="list-shifted">
           <div class="list-title">
