--- a/public/de/wirueberuns/index.html
+++ b/public/de/wirueberuns/index.html
@@ -57,7 +57,7 @@
       <img class="img-logo-klein" src="/img/logo-klein.png" alt="Haus der Sonne">
     </a>
     <div class="pagepicture">
-      <img src="/img/derVerein/derVereinTitle.jpg" alt="List Picture" class="img-pagepicture">
+      <img src="/img/WirUeberUns/WirUeberUnsTitle.jpg" alt="List Picture" class="img-pagepicture">
     </div>
     <div>
       <div class="pagetitle">
@@ -76,6 +76,23 @@
             </div>
             <div class="list-description">
               Der Vorstand stellt sich vor.
+            </div>
+          </div>
+          <div class="list-date">
+            Samstag, März 15, 2025
+          </div>
+        </div>
+      </div>
+      
+      <div class="list-container" onclick="location.href='\/de\/wirueberuns\/diesatzung\/';">
+        <img src="/img/wirUeberUns/dieSatzung/dieSatzungTitle.png" alt="List Picture" class="list-picture">
+        <div class="list-textbox">
+          <div class="list-shifted">
+            <div class="list-title">
+              Die Satzung
+            </div>
+            <div class="list-description">
+              Die Satzung ist sozusagen die &#34;Verfassung&#34; unseres Vereins und regelt seine Organisation und Handlungsweisen. Eine Satzung ist erforderlich, damit der Verein rechtsgültig gegründet werden kann und den Status eines eingetragenen Vereins (e. V.) erhält.
             </div>
           </div>
           <div class="list-date">
