--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -97,7 +97,7 @@
                                     <a href="Finanzen">Finanzen</a>
                                 </li>
                                 <li>
-                                    <a href="#">Satzung</a>
+                                    <a href="wirUeberUns/dieSatzung">Die Satzung</a>
                                 </li>
                                 <li>
                                     <a href="#">Presse</a>
