--- a/public/de/wirueberuns/index.html
+++ b/public/de/wirueberuns/index.html
@@ -101,6 +101,23 @@
         </div>
       </div>
       
+      <div class="list-container" onclick="location.href='\/de\/wirueberuns\/presse\/';">
+        <img src="/img/wirUeberUns/Presse/PresseTitle.png" alt="List Picture" class="list-picture">
+        <div class="list-textbox">
+          <div class="list-shifted">
+            <div class="list-title">
+              Presse
+            </div>
+            <div class="list-description">
+              Eine gute Presse ist wichtig für uns. Der Verein kommt dadurch in alle Munde und viele Menschen lernen uns und unsere Proejkte kennen. Hier geht es zu den bereits veröffentlichten Artikeln.
+            </div>
+          </div>
+          <div class="list-date">
+            Samstag, März 15, 2025
+          </div>
+        </div>
+      </div>
+      
     </div>
   </div>
 </div>
