--- a/public/de/index.html
+++ b/public/de/index.html
@@ -100,7 +100,7 @@
                                     <a href="wirUeberUns/dieSatzung">Die Satzung</a>
                                 </li>
                                 <li>
-                                    <a href="#">Presse</a>
+                                    <a href="wirUeberUns/Presse">Presse</a>
                                 </li>
                                 <li>
                                     <a href="#">Chronik</a>
