--- a/public/de/index.html
+++ b/public/de/index.html
@@ -154,7 +154,7 @@
                             <img src="/img/help.png" alt="Hile zur Selbsthilfe">
                             <ul>
                                 <li>
-                                    <a href="#">Gemüsegarten</a>
+                                    <a href="HilfeZurSelbsthilfe/Gemuesegarten">Gemüsegarten</a>
                                 </li>
                                 <li>
                                     <a href="#">Nutztiere</a>
