--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -100,7 +100,7 @@
                                     <a href="wirUeberUns/dieSatzung">Die Satzung</a>
                                 </li>
                                 <li>
-                                    <a href="#">Presse</a>
+                                    <a href="wirUeberUns/Presse">Presse</a>
                                 </li>
                                 <li>
                                     <a href="#">Chronik</a>
@@ -154,7 +154,7 @@
                             <img src="/img/help.png" alt="Hile zur Selbsthilfe">
                             <ul>
                                 <li>
-                                    <a href="#">Gemüsegarten</a>
+                                    <a href="HilfeZurSelbsthilfe/Gemuesegarten">Gemüsegarten</a>
                                 </li>
                                 <li>
                                     <a href="#">Nutztiere</a>
