--- a/public/de/finanzen/aktuellefinanzuebersicht/index.html
+++ b/public/de/finanzen/aktuellefinanzuebersicht/index.html
@@ -89,19 +89,19 @@ Die nachfolgenden Aufstellungen sind Teil unseres Versprechens auf Transparenz u
   <tbody> 
       <tr>
         <td>Einnahmen seit Vereinsgründung</td>
-        <td>351.084,11 €</td>
+        <td>362.346,61 €</td>
       </tr> 
       <tr>
         <td>Ausgaben seit Vereinsgründung</td>
-        <td>311.890,46 €</td>
+        <td>318.516,18 €</td>
       </tr> 
       <tr>
         <td>Aktueller Kontostand</td>
-        <td>39.193,65 €</td>
+        <td>43.830,43 €</td>
       </tr> 
       <tr>
         <td>Verfügbare Summe</td>
-        <td>1.133,65 €</td>
+        <td>5.770,43 €</td>
       </tr>
   </tbody>
 </table>
@@ -155,7 +155,7 @@ Die nachfolgenden Aufstellungen sind Teil unseres Versprechens auf Transparenz u
   <tbody> 
       <tr>
         <td>Verfügbare Summe</td>
-        <td>1.133,65 €</td>
+        <td>5.770,43 €</td>
       </tr>
   </tbody>
 </table>
@@ -219,6 +219,21 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
     </tr>
   </thead>
   <tbody> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Kontoführungsgebühren</td>
+        <td>-7,10 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Überweisungskosten</td>
+        <td>-30,00 €</td>
+      </tr> 
+      <tr>
+        <td>12.03.2025</td>
+        <td>1&amp;1 Internetkosten</td>
+        <td>-21,62 €</td>
+      </tr> 
       <tr>
         <td>04.03.2025</td>
         <td>Überweisungskosten</td>
@@ -417,27 +432,7 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
       <tr>
         <td>08.04.2024</td>
         <td>Überweisungskosten</td>
-        <td>-3,90 €</td>
-      </tr> 
-      <tr>
-        <td>02.04.2024</td>
-        <td>Rückerstattung Überweisungskosten</td>
-        <td>3,90 €</td>
-      </tr> 
-      <tr>
-        <td>28.03.2024</td>
-        <td>Kontoführungsgebühren</td>
-        <td>-5,00 €</td>
-      </tr> 
-      <tr>
-        <td>27.03.2024</td>
-        <td>Überweisungskosten</td>
-        <td>-3,90 €</td>
-      </tr> 
-      <tr>
-        <td>13.03.2024</td>
-        <td>1&amp;1 Internetkosten</td>
-        <td>-15,14 €</td>
+        <td>-3,90 €</td>
       </tr>
   </tbody>
 </table>
@@ -454,6 +449,56 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
     </tr>
   </thead>
   <tbody> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Brunnenwartung</td>
+        <td>-152,00 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Prüfungsgebühr Diana</td>
+        <td>-240,00 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Renovierung Haus der Sonne</td>
+        <td>-840,00 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Schulgarten École Catholique saint-pierre de Bamougoung</td>
+        <td>-500,00 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Schulgarten École publique Bameboro</td>
+        <td>-500,00 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Unterstützung Waisenhäuser</td>
+        <td>-2.000,00 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Zahnhygiene</td>
+        <td>-150,00 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>Ausbildung Cheila, Dadiane, Blondelle</td>
+        <td>-150,00 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>med. Versorgung Carles Christ &#43; Cabrel Désiré</td>
+        <td>-30,00 €</td>
+      </tr> 
+      <tr>
+        <td>31.03.2025</td>
+        <td>1 warme Mahlzeit April 2025</td>
+        <td>-2.005,00 €</td>
+      </tr> 
       <tr>
         <td>04.03.2025</td>
         <td>Kleidung</td>
@@ -741,66 +786,6 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
       </tr> 
       <tr>
         <td>08.04.2024</td>
-        <td>1 warme Mahlzeit April 2024</td>
-        <td>-2.005,00 €</td>
-      </tr> 
-      <tr>
-        <td>02.04.2024</td>
-        <td>Zurück von Western Union</td>
-        <td>152,00 €</td>
-      </tr> 
-      <tr>
-        <td>02.04.2024</td>
-        <td>Zurück von Western Union</td>
-        <td>8.000,00 €</td>
-      </tr> 
-      <tr>
-        <td>02.04.2024</td>
-        <td>Zurück von Western Union</td>
-        <td>150,00 €</td>
-      </tr> 
-      <tr>
-        <td>02.04.2024</td>
-        <td>Zurück von Western Union</td>
-        <td>35,00 €</td>
-      </tr> 
-      <tr>
-        <td>02.04.2024</td>
-        <td>Zurück von Western Union</td>
-        <td>35,00 €</td>
-      </tr> 
-      <tr>
-        <td>28.03.2024</td>
-        <td>Zurück von Western Union</td>
-        <td>2.005,00 €</td>
-      </tr> 
-      <tr>
-        <td>27.03.2024</td>
-        <td>Brunnen: Wartung</td>
-        <td>-152,00 €</td>
-      </tr> 
-      <tr>
-        <td>27.03.2024</td>
-        <td>Umweltprojekt</td>
-        <td>-8.000,00 €</td>
-      </tr> 
-      <tr>
-        <td>27.03.2024</td>
-        <td>Zahnhygiene</td>
-        <td>-150,00 €</td>
-      </tr> 
-      <tr>
-        <td>27.03.2024</td>
-        <td>med. Versorgung Rodanice</td>
-        <td>-35,00 €</td>
-      </tr> 
-      <tr>
-        <td>27.03.2024</td>
-        <td>med. Versorgung Bertin</td>
-        <td>-35,00 €</td>
-      </tr> 
-      <tr>
-        <td>27.03.2024</td>
         <td>1 warme Mahlzeit April 2024</td>
         <td>-2.005,00 €</td>
       </tr>
