--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -85,13 +85,13 @@
                             <img src="/img/logo-klein.png" alt="Haus der Sonne">
                             <ul>
                                 <li>
-                                    <a href="#">Ziel</a>
+                                    <a href="#" style="color: lightgray;">Ziel</a>
                                 </li>
                                 <li>
                                     <a href="derVerein/Organisation">Der Vorstand</a>
                                 </li>
                                 <li>
-                                    <a href="#">Transparenz</a>
+                                    <a href="#" style="color: lightgray;">Transparenz</a>
                                 </li>
                                 <li>
                                     <a href="Finanzen">Finanzen</a>
@@ -103,7 +103,7 @@
                                     <a href="wirUeberUns/Presse">Presse</a>
                                 </li>
                                 <li>
-                                    <a href="#">Chronik</a>
+                                    <a href="#" style="color: lightgray;">Chronik</a>
                                 </li>
                             </ul>
                         </div>
@@ -130,10 +130,10 @@
                                     <a href="Versorgung/BrunnenbauAktuell">Sauberes Wasser</a>
                                 </li>
                                 <li>
-                                    <a href="#">Medizinische Versorgung</a>
+                                    <a href="#" style="color: lightgray;">Medizinische Versorgung</a>
                                 </li>
                                 <li>
-                                    <a href="#">Sanitätshaus</a>
+                                    <a href="#" style="color: lightgray;">Sanitätshaus</a>
                                 </li>
                             </ul>
                         </div>
@@ -142,10 +142,10 @@
                             <img src="/img/educationMan.png" alt="Bildung">
                             <ul>
                                 <li>
-                                    <a href="#">Nachhilfe</a>
+                                    <a href="#" style="color: lightgray;">Nachhilfe</a>
                                 </li>
                                 <li>
-                                    <a href="#">Aufklärung</a>
+                                    <a href="#" style="color: lightgray;">Aufklärung</a>
                                 </li>
                             </ul>
                         </div>
@@ -157,13 +157,13 @@
                                     <a href="HilfeZurSelbsthilfe/Gemuesegarten">Gemüsegarten</a>
                                 </li>
                                 <li>
-                                    <a href="#">Nutztiere</a>
+                                    <a href="HilfeZurSelbsthilfe/Nutztiere">Nutztiere</a>
                                 </li>
                                 <li>
-                                    <a href="#">Umwelt/Müll</a>
+                                    <a href="#" style="color: lightgray;">Umwelt/Müll</a>
                                 </li>
                                 <li>
-                                    <a href="#">Waisenhäuser</a>
+                                    <a href="#" style="color: lightgray;">Waisenhäuser</a>
                                 </li>
                             </ul>
                         </div>
@@ -172,10 +172,10 @@
                             <img src="/img/galerie.png" alt="Hile zur Selbsthilfe">
                             <ul>
                                 <li>
-                                    <a href="#">Fotos</a>
+                                    <a href="#" style="color: lightgray;">Fotos</a>
                                 </li>
                                 <li>
-                                    <a href="#">Chronik</a>
+                                    <a href="#" style="color: lightgray;">Chronik</a>
                                 </li>
                             </ul>
                         </div>
