Presse und darkmode

--- a/public/de/finanzen/aktuellefinanzuebersicht/index.html
+++ b/public/de/finanzen/aktuellefinanzuebersicht/index.html
@@ -866,7 +866,7 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
         <script>
             
             var jsTheme = document.getElementById("js-theme-footer");
-            if (localStorage.getItem("darkMode") == "true") {
+            if (localStorage.getItem("darkMode") == "false") {
                 jsTheme.className = "light-theme";
             } else {
                 jsTheme.className = "dark-theme";
@@ -880,7 +880,7 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
 <script>
   
   var jsTheme = document.getElementById("js-theme-single");
-  if (localStorage.getItem("darkMode") == "true") {
+  if (localStorage.getItem("darkMode") == "false") {
       jsTheme.className = "light-theme";
   } else {
       jsTheme.className = "dark-theme";
