--- a/public/de/helfen/index.html
+++ b/public/de/helfen/index.html
@@ -218,7 +218,7 @@
         <script>
             
             var jsTheme = document.getElementById("js-theme-footer");
-            if (localStorage.getItem("darkMode") == "true") {
+            if (localStorage.getItem("darkMode") == "false") {
                 jsTheme.className = "light-theme";
             } else {
                 jsTheme.className = "dark-theme";
@@ -231,7 +231,7 @@
 <script>
   
   var jsTheme = document.getElementById("js-theme-list");
-  if (localStorage.getItem("darkMode") == "true") {
+  if (localStorage.getItem("darkMode") == "false") {
       jsTheme.className = "light-theme";
   } else {
       jsTheme.className = "dark-theme";
