--- a/public/de/wirueberuns/index.html
+++ b/public/de/wirueberuns/index.html
@@ -167,7 +167,7 @@
         <script>
             
             var jsTheme = document.getElementById("js-theme-footer");
-            if (localStorage.getItem("darkMode") == "true") {
+            if (localStorage.getItem("darkMode") == "false") {
                 jsTheme.className = "light-theme";
             } else {
                 jsTheme.className = "dark-theme";
@@ -180,7 +180,7 @@
 <script>
   
   var jsTheme = document.getElementById("js-theme-list");
-  if (localStorage.getItem("darkMode") == "true") {
+  if (localStorage.getItem("darkMode") == "false") {
       jsTheme.className = "light-theme";
   } else {
       jsTheme.className = "dark-theme";
