--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -339,8 +339,12 @@
         }
 
         
+        let height = window.innerHeight;
         function updateViewableArea() {
-            const height = window.innerHeight;
+            if (window.innerHeight < height || window.innerHeight > height * 1.1) {
+                height = window.innerHeight;
+            }
+            
             document.documentElement.style.setProperty('--viewable-height', `${height}px`);
         }
 
