bilder konstant in list und single

--- a/public/de/index.html
+++ b/public/de/index.html
@@ -344,7 +344,6 @@
             if (window.innerHeight < height || window.innerHeight > height * 1.2) {
                 height = window.innerHeight;
             }
-            
             document.documentElement.style.setProperty('--viewable-height', `${height}px`);
         }
 
@@ -441,7 +440,7 @@
   <h3>Ein warme Mahlzeit am Tag ändert viel.</h3>  
   <h3>Sauberes Wasser hilft der ganzen Gemeinschaft.</h3>  
   <br>
-  <button id="js-button-helfen" onclick="window.location.href='./Helfen';">Helfen Sie auch</button>  
+  <button id="js-button-helfen" onclick="window.location.href='./Helfen';">→ Helfen auch Sie</button>  
 </div>
 
     <br>
