--- a/public/de/finanzen/aktuellefinanzuebersicht/index.html
+++ b/public/de/finanzen/aktuellefinanzuebersicht/index.html
@@ -901,8 +901,11 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
   });
 
   
+  let height = window.innerHeight;
   function updateViewableArea() {
-    const height = window.innerHeight;
+    if (window.innerHeight < height || window.innerHeight > height * 1.2) {
+        height = window.innerHeight;
+    }
     document.documentElement.style.setProperty('--viewable-height', `${height}px`);
   }
 
