--- a/public/de/index.html
+++ b/public/de/index.html
@@ -458,7 +458,7 @@
                   Der 5. Brunnen
                 </div>
                 <div class="list-description">
-                  Das Projekt &#34;Brunnenbau&#34; lebt von der Unterstützung eines dem Haus der Sonne sehr zugetanen und sehr großzügigen Menschen. Wir sind in der Lage, jedes Jahr einen neuen Brunnen zu bauen. Hier finden Sie die Angaben zum 5. Brunnens.
+                  Das Projekt &#34;Brunnenbau&#34; lebt von der Unterstützung eines dem Haus der Sonne sehr zugetanen und sehr großzügigen Menschen. Wir sind in der Lage, jedes Jahr einen neuen Brunnen zu bauen. Hier finden Sie die Angaben zum fünften Brunnens.
                 </div>
               </div>
               <div class="list-date">
