--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -127,7 +127,7 @@
                                     <a href="Versorgung/EineWarmeMahlzeit">Eine warme Mahlzeit</a>
                                 </li>
                                 <li>
-                                    <a href="Versorgung/BrunnenbauAktuell">Sauberes Wasser</a>
+                                    <a href="Versorgung/Brunnenbau_6">Sauberes Wasser</a>
                                 </li>
                                 <li>
                                     <a href="#" style="color: lightgray;">Medizinische Versorgung</a>
@@ -142,10 +142,10 @@
                             <img src="/img/educationMan.png" alt="Bildung">
                             <ul>
                                 <li>
-                                    <a href="#" style="color: lightgray;">Nachhilfe</a>
+                                    <a href="Bildung/Nachhilfe">Nachhilfe</a>
                                 </li>
                                 <li>
-                                    <a href="#" style="color: lightgray;">Aufklärung</a>
+                                    <a href="Bildung/Aufklaerung">Aufklärung</a>
                                 </li>
                             </ul>
                         </div>
