--- a/public/en/index.html
+++ b/public/en/index.html
@@ -132,9 +132,6 @@
                                 <li>
                                     <a href="#" style="color: lightgray;">Medizinische Versorgung</a>
                                 </li>
-                                <li>
-                                    <a href="#" style="color: lightgray;">Sanitätshaus</a>
-                                </li>
                             </ul>
                         </div>
                         <div class="submenu-column">
@@ -702,14 +699,14 @@
                     <h2>Unterstützen Sie das Haus der Sonne</h2>
                     <div class="donate Spenden">
                         <p>Hier geht es zu den zahlreichen Möglichkeiten, den Verein finanziell zu unterstützen:</p>
-                        <div class="button-heart" onclick="window.location.href='./Helfen';">
+                        <div class="button-heart" onclick="window.location.href='http:\/\/localhost:1313\//en/Helfen/';">
                             <button class="heart-btn"></button>
                             <p class="heart-btn-click">Klick</p>
                         </div>
                     </div>
                     <div class="donate Patenschaft">
                         <p>Eine Patenschaft sichert einem Kind die tägliche warme Mahlzeit:</p>
-                        <button class="button-patenschaft" onclick="window.location.href='./Helfen/pateWerden';">Eine
+                        <button class="button-patenschaft" onclick="window.location.href='http:\/\/localhost:1313\//en/Helfen/pateWerden';">Eine
                             Patenschaft übernehmen</button>
                     </div>
                 </div>
