--- a/public/de/finanzen/aktuellefinanzuebersicht/index.html
+++ b/public/de/finanzen/aktuellefinanzuebersicht/index.html
@@ -847,14 +847,14 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
                     <h2>Unterstützen Sie das Haus der Sonne</h2>
                     <div class="donate Spenden">
                         <p>Hier geht es zu den zahlreichen Möglichkeiten, den Verein finanziell zu unterstützen:</p>
-                        <div class="button-heart" onclick="window.location.href='./Helfen';">
+                        <div class="button-heart" onclick="window.location.href='http:\/\/localhost:1313\//de/Helfen/';">
                             <button class="heart-btn"></button>
                             <p class="heart-btn-click">Klick</p>
                         </div>
                     </div>
                     <div class="donate Patenschaft">
                         <p>Eine Patenschaft sichert einem Kind die tägliche warme Mahlzeit:</p>
-                        <button class="button-patenschaft" onclick="window.location.href='./Helfen/pateWerden';">Eine
+                        <button class="button-patenschaft" onclick="window.location.href='http:\/\/localhost:1313\//de/Helfen/pateWerden';">Eine
                             Patenschaft übernehmen</button>
                     </div>
                 </div>
@@ -902,6 +902,9 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
 
   
   let height = window.innerHeight;
+  console.log("test");
+  document.documentElement.style.setProperty('--viewable-height', `${height}px`);
+
   function updateViewableArea() {
     if (window.innerHeight < height || window.innerHeight > height * 1.2) {
         height = window.innerHeight;
