--- a/public/de/finanzen/aktuellefinanzuebersicht/index.html
+++ b/public/de/finanzen/aktuellefinanzuebersicht/index.html
@@ -901,14 +901,15 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
 
   
   let height = window.innerHeight;
-  console.log("test");
   document.documentElement.style.setProperty('--viewable-height', `${height}px`);
+  document.documentElement.style.setProperty('--pagepicture-height', `${height}px`);
 
   function updateViewableArea() {
+    document.documentElement.style.setProperty('--viewable-height', `${window.innerHeight}px`);
     if (window.innerHeight < height || window.innerHeight > height * 1.2) {
         height = window.innerHeight;
     }
-    document.documentElement.style.setProperty('--viewable-height', `${height}px`);
+    document.documentElement.style.setProperty('--pagepicture-height', `${height}px`);
   }
 
   
