--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -85,10 +85,10 @@
                             <img src="/img/logo-klein.png" alt="Haus der Sonne">
                             <ul>
                                 <li>
-                                    <a href="#" style="color: lightgray;">Ziel</a>
+                                    <a href="wirUeberUns/Ziel">Ziel</a>
                                 </li>
                                 <li>
-                                    <a href="derVerein/Organisation">Der Vorstand</a>
+                                    <a href="wirUeberUns/derVorstand">Der Vorstand</a>
                                 </li>
                                 <li>
                                     <a href="#" style="color: lightgray;">Transparenz</a>
