--- a/public/de/index.html
+++ b/public/de/index.html
@@ -156,7 +156,7 @@
                                     <a href="#" style="color: lightgray;">Umwelt/Müll</a>
                                 </li>
                                 <li>
-                                    <a href="#" style="color: lightgray;">Waisenhäuser</a>
+                                    <a href="HilfeZurSelbsthilfe/Waisenhaeuser">Waisenhäuser</a>
                                 </li>
                             </ul>
                         </div>
