--- a/public/en/index.html
+++ b/public/en/index.html
@@ -100,7 +100,25 @@
                                 <li>
                                     <a href="wirUeberUns/Presse">Presse</a>
                                 </li>
+                                <li>
+                                    <a href="wirUeberUns/Veranstaltungen">Veranstaltungen</a>
+                                </li>
                                 
+                            </ul>
+                        </div>
+                        <div class="submenu-column">
+                            <h4>Kooperationen</h4>
+                            <img src="/img/cooperations.png" alt="Kooperationen">
+                            <ul>
+                                <li>
+                                    <a href="GesamtschuleKempen">Gesamtschule Kempen</a>
+                                </li>
+                                <li>
+                                    <a href="HannahArendtGymnasiumKrefeld">Hannah-Arendt-Gymnasium Krefeld</a>
+                                </li>
+                                <li>
+                                    <a href="#" style="color: lightgray;">Gesamtschule Mühlheim</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -138,6 +156,9 @@
                                     <a href="Bildung/Nachhilfe">Nachhilfe</a>
                                 </li>
                                 <li>
+                                    <a href="#" style="color: lightgray;">Ausbildung</a>
+                                </li>
+                                <li>
                                     <a href="Bildung/Aufklaerung">Aufklärung</a>
                                 </li>
                             </ul>
@@ -153,7 +174,7 @@
                                     <a href="HilfeZurSelbsthilfe/Nutztiere">Nutztiere</a>
                                 </li>
                                 <li>
-                                    <a href="#" style="color: lightgray;">Umwelt/Müll</a>
+                                    <a href="HilfeZurSelbsthilfe/Umwelt">Umwelt/Müll</a>
                                 </li>
                                 <li>
                                     <a href="HilfeZurSelbsthilfe/Waisenhaeuser">Waisenhäuser</a>
@@ -177,69 +198,7 @@
                 </div>
             </div>
         </li>
-        <li class="has-submenu">
-            <a href="#" class="menu-title">Kooperationen</a>
-            <div class="submenu-container-colRight">
-                <div class="submenu">
-                    <h3>
-                        Unsere Kooperationen
-                    </h3>
-                    <div class="colums">
-                        <div class="submenu-column">
-                            <h4>Gesamtschule Kempen</h4>
-                            <img class="img-wide" src="/img/GSK.png" alt="Gesamtschule Kempen">
-                            <ul>
-                                <li>
-                                    <a href="#" style="color: lightgray;">Veranstaltungen</a>
-                                </li>
-                                <li>
-                                    <a href="#" style="color: lightgray;">Unterricht/AG</a>
-                                </li>
-                                <li>
-                                    <a href="#" style="color: lightgray;">Galerie</a>
-                                </li>
-                                <li>
-                                    <a href="https://www.gesamtschule-kempen.de/">Link zur Homepage</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="submenu-column">
-                            <h4>Hannah-Arendt-Gymnasium</h4>
-                            <img class="img-wide" src="/img/HAG.png" alt="Hannah-Arendt-Gymnasium">
-                            <ul>
-                                <li>
-                                    <a href="#" style="color: lightgray;">Veranstaltungen</a>
-                                </li>
-                                <li>
-                                    <a href="#" style="color: lightgray;">Unterricht/AG</a>
-                                </li>
-                                <li>
-                                    <a href="#" style="color: lightgray;">Galerie</a>
-                                </li>
-                                <li>
-                                    <a href="https://hag-krefeld.de/">Link zur Homepage</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="submenu-column">
-                            <h4>Gesamtschule Mühlheim</h4>
-                            <img class="img-wide" src="/img/GSM.png" alt="Gesamtschule Mühlheim">
-                            <ul>
-                                <li>
-                                    <a href="#" style="color: lightgray;">Veranstaltungen</a>
-                                </li>
-                                <li>
-                                    <a href="#" style="color: lightgray;">Galerie</a>
-                                </li>
-                                <li>
-                                    <a href="https://www.gustav-mh.de/">Link zur Homepage</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </li>
+        
         <li  class="has-submenu">
             <a href="#" class="menu-title">To help</a>
             <div class="submenu-container-colRight">
