--- a/public/de/wirueberuns/index.html
+++ b/public/de/wirueberuns/index.html
@@ -84,6 +84,23 @@
         </div>
       </div>
       
+      <div class="list-container" onclick="location.href='\/de\/wirueberuns\/veranstaltungen\/';">
+        <img src="/img/wirUeberUns/Veranstaltungen/VeranstaltungenTitle.jpg" alt="List Picture" class="list-picture">
+        <div class="list-textbox">
+          <div class="list-shifted">
+            <div class="list-title">
+              Veranstaltungen
+            </div>
+            <div class="list-description">
+              Hier finden Sie alle geplanten Veranstltungen diesen Jahres.
+            </div>
+          </div>
+          <div class="list-date">
+            Sonntag, Mai 18, 2025
+          </div>
+        </div>
+      </div>
+      
       <div class="list-container" onclick="location.href='\/de\/wirueberuns\/dervorstand\/';">
         <img src="/img/wirUeberUns/derVorstand/derVorstandTitle.jpg" alt="List Picture" class="list-picture">
         <div class="list-textbox">
